--- a/linguaflow.html
+++ b/linguaflow.html
@@ -16,12 +16,12 @@
             font-family: 'Poppins', sans-serif;
             background: var(--gradient);
             margin: 0;
-            min-height: 100vh; /* Ensures it expands beyond viewport if needed */
+            min-height: 100vh; 
             display: flex;
             justify-content: center;
             align-items: center;
             position: relative;
-            overflow-x: hidden; /* Keep horizontal scrolling disabled */
+            overflow-x: hidden; 
         }
 
         .container {
